<resources>
    <string name="app_name">AlAda Business</string>
    <string name="msg_token_fmt">"message du token "</string>
    <string name="title_activity_story" translatable="false">FullscreenActivity</string>
    <string name="dummy_button" translatable="false">Dummy Button</string>
    <string name="dummy_content" translatable="false">DUMMY\nCONTENT</string>
    <string name="getStarted">Get started</string>
    <string name="next">Next</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</string>
    <string name="register">Register</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="continue_">Continue</string>
    <string name="connection">Connection</string>
    <string name="todo">TODO</string>
    <string name="ex_phone">Ex: XXX XXX XXX</string>
    <string name="home">Home</string>
    <string name="me">Me</string>
    <string name="history">History</string>
    <string name="statistics">Statistics</string>
    <string name="latest_transactions">Latest Transactions</string>
    <string name="hello">Hello!</string>
    <string name="income">Income</string>
    <string name="saving">Saving</string>
    <string name="expense">Expense</string>
    <string name="savings">Savings</string>
    <string name="incomes">Incomes</string>
    <string name="expenses">Expenses</string>
    <string name="my_accounts">My Accounts</string>
    <string name="category_summary">Category Summary</string>
    <string name="total_expenses">Total expenses :</string>
    <string name="total_incomes">Total incomes</string>
    <string name="spending">Spending : </string>
    <string name="target">Target</string>
    <string name="limit">Limit</string>
    <string name="title_activity_transaction_list">Transactions</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="mail">E mail</string>
    <string name="log_out">Log out</string>
    <string name="settings">Settings</string>
    <string name="create_an_order">Create An Order</string>
    <string name="Overview">Overview</string>
    <string name="today_s_sales">Today\'s Sales</string>
    <string name="weekly_sales">Weekly Sales</string>
    <string name="monthly_sales">Monthly Sales</string>
    <string name="menu_list">Menu List</string>
    <string name="order_list">Order List</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="orders">Orders</string>
    <string name="profile">Profile</string>
    <string name="menu">Menu</string>
    <string name="table">Table</string>
    <string name="Code">Code</string>
    <string name="code_command">Order Code</string>
    <string name="ordered_on">Ordered on</string>
    <string name="total">Total</string>
    <string name="ordered_products">Ordered products</string>
    <string name="pay">Print &amp; Pay</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="title_activity_menu_item">MenuItemActivity</string>
    <string name="currency_cfa">FCFA</string>
    <string name="infos_de_base">Infos de base</string>
    <string name="product_description_text">Provide detailed informations to the user about your product, through naming, pricing and giving an image to your product.</string>
    <string name="product_name">Name of the product</string>
    <string name="product_price">Price of the product</string>
    <string name="image_upload_guide">Tap  here to add the image. Upload images of maximum 5Mo.</string>
    <string name="save">Save</string>
    <string name="product_category">Category of product</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="add_category">Add a new category</string>
    <string name="title_activity_business_creation">BusinessCreationActivity</string>
    <string name="business_creation_intro">Give us details on your business, to help us better serve you.</string>
    <string name="business_name">Business name</string>
    <string name="business_description">Business description (Optional)</string>
    <string name="business_category">Business category</string>
    <string name="basic_info">Basic info</string>
    <string name="business_creation_basic_info">Business Creation - Basic info</string>
    <string name="business_details">Business Details</string>
    <string name="business_creation_business_details">Business Creation - Business Details</string>
    <string name="business_detail_intro">Almost OK. Tell us more about your business and help us understand your needs.</string>
    <string name="question_number_floor">How many floors do you have?</string>
    <string name="question_sale_point">How many sale point do you have?</string>
    <string name="question_place">Where are you located?</string>
    <string name="business_coordinates">Business GPS coordinates</string>
    <string name="business_hours">Business hours</string>
    <string name="done">Done</string>
    <string name="business_phone_2">Business phone 2 (Optional)</string>
    <string name="business_phone">Business phone</string>
    <string name="title_activity_main2" translatable="false">MainActivity2</string>
    <string name="category_name">Category name</string>
    <string name="category_menu">Menu Category</string>
    <string name="category_description_text">A category is a group of element in your menu. This will help you organise your menu and propose a clear comprehensible experience to your guest.</string>
    <string name="user_creation_intro">Create users that will be able to interact with the system, by default the creator is recognised as an admin user. Beware of the roles you grant to the various users created!</string>
    <string name="user_name">User name</string>
    <string name="user_email_optional">User email (Optional)</string>
    <string name="user_phone">User phone</string>
    <string name="select_role">Select the user\'s role</string>
    <string name="title_activity_users">Users</string>
    <string name="business_name_input_error">Please the business name should have at least 4 characters.</string>
    <string name="business_category_input_error">Please tell us what is your business core activity.</string>
    <string name="business_description_input_error">Please the business description should have at least 20 characters.</string>
    <string name="business_phone_error_input">Please the business phone should have at least 6 characters.</string>
    <string name="business_place_error_input">Please the business location should have at least 6 characters.</string>
    <string name="image_internal_loading_failed">Error occurred while loading the image.</string>
    <string name="grant_permission_and_restart">Please grant the permission and redo the action.</string>
    <string name="business_floor_error_input">Your business should have at least 1 floor.</string>
    <string name="business_sale_point_error_input">Your business should have at least 1 sale point.</string>
    <string name="loading">Loading …</string>
    <string name="add_menu">Add Menu</string>
    <string name="add_a_new_category">Add a new category</string>
    <string name="menu_item_price_input_error">Your menu item should have a price.</string>
    <string name="menu_item_name_input_error">Your menu item should have a name.</string>
    <string name="send">Save</string>
    <string name="direct_sale">Direct Sale</string>
    <string name="actions">Actions</string>
    <string name="by_course">By course</string>
    <string name="mode_by_course">Order by course</string>
    <string name="clear_symbol" translatable="false">C</string>
    <string name="dot_symbol" translatable="false">.</string>
    <string name="back_space_symbol" translatable="false">_</string>
    <string name="symbol_7" translatable="false">7</string>
    <string name="symbol_8" translatable="false">8</string>
    <string name="symbol_9" translatable="false">9</string>
    <string name="symbol_4" translatable="false">4</string>
    <string name="symbol_5" translatable="false">5</string>
    <string name="symbol_6" translatable="false">6</string>
    <string name="symbol_1" translatable="false">1</string>
    <string name="symbol_2" translatable="false">2</string>
    <string name="symbol_3" translatable="false">3</string>
    <string name="symbol_00" translatable="false">00</string>
    <string name="symbol_0" translatable="false">0</string>
    <string name="symbol_cross" translatable="false">X</string>
    <string name="search_table">search table</string>
    <string name="select_a_table">Select a table</string>
    <string name="customer">Customer</string>
    <string name="title_activity_table" translatable="false">TableActivity</string>
    <string name="create_a_table">Create a table</string>
    <string name="list_of_table">List of tables</string>
    <string name="floor_plan">Floor plan</string>
    <string name="guest_table">Guest table</string>
    <string name="seats">seats</string>
    <string name="seat">seat</string>
    <string name="table_creation_intro">Add a table by determining it\'s name and give the table capacity.</string>
    <string name="table_name">Table name</string>
    <string name="table_capacity">Table capacity</string>
    <string name="table_info">Table infos</string>
    <string name="table_capacity_input_error">The table capacity must be a number and greater than 0.</string>
    <string name="table_created">Table successfully created!!!</string>
    <string name="table_updated">Table successfully updated!!!</string>
    <string name="table_name_already_exist">The table name must be unique.</string>
    <string name="menu_management">Menu management</string>
    <string name="floor_plan_management">Floor plan management</string>
    <string name="user_management">User management</string>
    <string name="tables_management">Tables management</string>
    <string name="add_course">Add course</string>
    <string name="order_total">Order total</string>
    <string name="add_order">Add a new order</string>
    <string name="order_management">Order management</string>
</resources>