<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

<!--    <group android:checkableBehavior="single">-->
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_user"
            android:icon="@drawable/ic_baseline_supervised_user_circle_24"
            android:title="@string/user_management" />
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_baseline_menu_book_24"
            android:title="@string/menu_management" />
        <item
            android:id="@+id/nav_table"
            android:icon="@drawable/ic_baseline_chair_alt_24"
            android:title="@string/tables_management" />

        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_baseline_list_alt_24"
            android:title="@string/order_management" />
<!--    </group>-->
</menu>
