<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.poupock.feussom.aladabusiness.core.dashboard.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_user"
        android:name="com.poupock.feussom.aladabusiness.core.user.UserListFragment"
        android:label="@string/user_management"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_menu"
        android:name="com.poupock.feussom.aladabusiness.core.menu.ListMenuFragment"
        android:label="@string/menu_management"
        tools:layout="@layout/fragment_list_menu" />

    <fragment
        android:id="@+id/nav_table"
        android:name="com.poupock.feussom.aladabusiness.core.table.TableListFragment"
        android:label="@string/tables_management"
        tools:layout="@layout/fragment_table_list" />

    <fragment
        android:id="@+id/nav_orders"
        android:name="com.poupock.feussom.aladabusiness.ui.fragment.order.OrderFragment"
        android:label="@string/order_management"
        tools:layout="@layout/fragment_order" />
</navigation>