<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_order">

    <fragment
        android:id="@+id/navigation_order"
        android:name="com.poupock.feussom.aladabusiness.ui.fragment.order.CreateOrderFragment"
        android:label="@string/orders"
        tools:layout="@layout/fragment_create_order" >

    </fragment>

    <fragment
        android:id="@+id/navigation_menu"
        android:name="com.poupock.feussom.aladabusiness.ui.fragment.menu.MenuFragment"
        android:label="@string/menu_list"
        tools:layout="@layout/fragment_menu" >

    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.poupock.feussom.aladabusiness.ui.fragment.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" >

    </fragment>
</navigation>
